[tool.poetry]
name = "las-geoh5"
version = "0.0.1"
description = "Las/Geoh5 conversion"
authors = ["Mira Geoscience <support@mirageoscience.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"

## dependencies on github repos
geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/GEOPY-1032.zip#sha256=" }
#geoh5py = {version ="~0.8.0rc1", source = "pypi", allow-prereleases = true}

## pip dependencies
lasio = {version = "~0.31", source = "pypi", allow-prereleases = true}
tqdm = {version = "^4.64.0"}

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
pytest-cov = "*"
toml = "*"

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
# auto-updated by seed-isort-config
known_third_party = ["geoh5py", "lasio", "numpy", "pytest", "toml", "tqdm"]

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
